--- a/index.html
+++ b/index.html
@@ -530,7 +530,13 @@
        }]
    }
 </script>
-</head><body>     
+</head><body>   
+	   <div style="text-align: center;">
+        <a href="./Samsunggalaxyscreenrepairinbohemia.html">Samsung Galaxy Screen Repair in Bohemia</a>&nbsp&nbsp
+        <a href="./Samsunggalaxybackglassrepairinbohemia.html">Samsung Galaxy Back Glass Repair in Bohemia</a>&nbsp&nbsp
+        <a href="./Samsunggalaxybatteryreplacementinbohemia.html">Samsung Galaxy Battery Replacement in Bohemia</a>&nbsp&nbsp
+        <a href="./Samsunggalaxycamerarepairinbohemia.html">Samsung Galaxy Camera Repair in Bohemia</a>
+    </div><br/>
  <a href="https://sites.google.com/view/samsung-galaxy-repair-bohemia/home" target="_blank"><img src="https://drive.google.com/uc?id=1orRql8w-OTgWF4xF1fLR271eFxckKQ1K" width="100%"></a> 
    <script type="text/javascript">
     		  function openWindow(event) {
